5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4385/executions/1613_2049.log
== TEST (2019-04-04 19:10:05) 
-- CODE:
nmr1=int(input("digite o numero:"))
nmr2=int(input("digite o numero:"))

total=print(x/y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total=print(x/y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:10:26) 
-- CODE:
nmr1=int(input("digite o numero:"))
nmr2=int(input("digite o numero:"))

print(x/y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(x/y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:10:55) 
-- CODE:
nmr1=int(input("digite o numero:"))
nmr2=int(input("digite o numero:"))

print(round(x/y))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(x/y))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:11:20) 
-- CODE:
nmr1=int(input("digite o numero:"))
nmr2=int(input("digite o numero:"))

print(nmr1/nmr2)

-- OUTPUT:
1.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:11:57) 
-- CODE:
nmr1=int(input("digite o numero:"))
nmr2=int(input("digite o numero:"))

print(nmr1/nmr2)
print(nmr1%nmr2)


-- OUTPUT:
1.6
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:12:33) 
-- CODE:
nmr1=int(input("digite o numero:"))
nmr2=int(input("digite o numero:"))

print(nmr1/nmr2)
print(nmr1%nmr2)
print(nmr1//nmr2)



-- OUTPUT:
1.6
3
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:13:48) 
-- CODE:
nmr1=int(input("digite o numero:"))
nmr2=int(input("digite o numero:"))

print(nmr1)
print(nmr2)
print(nmr1/nmr2)
print(nmr1//nmr2)
print(nmr1%nmr2)



-- OUTPUT:
8
5
1.6
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:14:03) 
-- CODE:
nmr1=int(input("digite o numero:"))
nmr2=int(input("digite o numero:"))

print(nmr1)
print(nmr2)
print(nmr1/nmr2)
print(nmr1//nmr2)
print(nmr1%nmr2)



-- EXECUTION TIME:
0.194684
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8
5
1.6
1
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14
2
7.0
7
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347
2
173.5
173
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:14:12) 
-- CODE:
nmr1=int(input("digite o numero:"))
nmr2=int(input("digite o numero:"))

print(nmr1)
print(nmr2)
print(nmr1/nmr2)
print(nmr1//nmr2)
print(nmr1%nmr2)



-- EXECUTION TIME:
0.219864
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8
5
1.6
1
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14
2
7.0
7
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347
2
173.5
173
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:14:12) 
-- CODE:
nmr1=int(input("digite o numero:"))
nmr2=int(input("digite o numero:"))

print(nmr1)
print(nmr2)
print(nmr1/nmr2)
print(nmr1//nmr2)
print(nmr1%nmr2)



-- OUTPUT:
8
5
1.6
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:15:03) 
-- CODE:
nmr1=int(input("digite o numero:"))
nmr2=int(input("digite o numero:"))

print(nmr1)
print(nmr2)
print(nmr1/nmr2)
print(nmr1%nmr2)



-- OUTPUT:
8
5
1.6
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:15:11) 
-- CODE:
nmr1=int(input("digite o numero:"))
nmr2=int(input("digite o numero:"))

print(nmr1)
print(nmr2)
print(nmr1/nmr2)
print(nmr1%nmr2)



-- EXECUTION TIME:
0.164801
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8
5
1.6
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14
2
7.0
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347
2
173.5
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:15:18) 
-- CODE:
nmr1=int(input("digite o numero:"))
nmr2=int(input("digite o numero:"))

print(nmr1)
print(nmr2)
print(nmr1//nmr2)
print(nmr1%nmr2)



-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:15:26) 
-- CODE:
nmr1=int(input("digite o numero:"))
nmr2=int(input("digite o numero:"))

print(nmr1)
print(nmr2)
print(nmr1//nmr2)
print(nmr1%nmr2)



-- EXECUTION TIME:
0.210319
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8
5
1
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14
2
7
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347
2
173
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
